Project/Docker-Kubernetes/DEV/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tomcat-dev
  labels:
   app: my-app-dev
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: devwebtomcatingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /webapp
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:480278898183:certificate/6fde47fd-eac1-4e49-8bc0-dcf0d8a855ae
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: my-aws-ingress-class 
  defaultBackend:
    service:
      name: webapp-application-service-dev
      port:
        number: 80
